--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "entrega-17",
   "version": "1.0.0",
   "description": "Entrega 17 para bootcamp de backend Coderhouse",
-  "author": "Esteban Demarchi",
+  "author": "Daniel Butti",
   "main": "index.js",
   "type": "module",
   "scripts": {
